# merak

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpackage.sh  manager
merak/: main.cpp
merak/actions/: action.cpp  action.h  get_action.cpp  get_action.h
merak/conf/: config.cpp  config.h
src/: main.cpp
tests/: main_tests.cpp
